--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1 {
     font-size: 38px;
     color: rgb(0, 0, 0);
     font-weight: bold;
-    text-align: center
+    text-align: center;
     
 }
 </style>
