--- a/styletwo.css
+++ b/styletwo.css
@@ -1,11 +1,21 @@
 
 
-p {
+.Num1 {
     background-color: pink;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-div class num2 {
+.Num2 {
     color: blue;
+    font-size: 36px;
 }
 
+#Num3 {
+    font-size: 24px;
+}
+
+#Num4 {
+    background-color: lightgreen;
+    font-size: 24px;
+    font-weight: bold;
+}
