--- a/stylethree.css
+++ b/stylethree.css
@@ -1,4 +1,4 @@
-
+<style>
 .click1 {
     color: white;
     background-color: black;
@@ -15,3 +15,4 @@
     size: 28px;
     font-family:Arial, Helvetica, sans-serif;
 }
+</style>
